Fix Scheduler appointment dialog visibility in material theme

--- a/styles/widgets/material/scheduler.material.less
+++ b/styles/widgets/material/scheduler.material.less
@@ -725,18 +725,36 @@
         }
     }
 
-    .dx-recurrence-repeat-end-container {
-        margin: 0;
-    }
+    .dx-scheduler-recurrence-rule-item.dx-field-item {
+        max-height: 400px;
 
-    .dx-recurrence-switch {
-        margin-top: 6px;
-    }
+        .dx-recurrence-numberbox-interval-label,
+        .dx-recurrence-repeat-on-label,
+        .dx-recurrence-repeat-end-container-label {
+            position: relative;
+            left: 0px;
+        }
 
+        .dx-recurrence-repeat-end-container-label,
+        .dx-recurrence-repeat-end-container {
+            padding-top: 0px;
+        }
 
-    .dx-recurrence-radiogroup-repeat-type-label,
-    .dx-recurrence-repeat-end-label {
-        line-height: @MATERIAL_BASE_INLINE_WIDGET_HEIGHT;
+        .dx-recurrence-radiogroup-repeat-type {
+            left: 0px;
+            top: 0px;
+        }
+
+        .dx-recurrence-repeat-end-container {
+            margin: 0;
+        }
+
+        .dx-recurrence-radiogroup-repeat-type-label,
+        .dx-recurrence-numberbox-interval-label,
+        .dx-recurrence-repeat-on-label,
+        .dx-recurrence-repeat-end-container-label {
+            line-height: @MATERIAL_BASE_INLINE_WIDGET_HEIGHT;
+        }
     }
 }
 
